<resources>
    <string name="app_name">eChat</string>
    <string name="echat_slogan">Explore a new Virtual World</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Open Navigation Drawer</string>
    <string name="_5">5</string>
    <string name="comment_icon">Comment icon</string>
    <string name="_0">0</string>
    <string name="dislike_icon">Dislike Icon</string>
    <string name="_10">10</string>
    <string name="like_icon">Like Icon</string>
    <string name="post_image_view">Post Image View</string>
    <string name="post_description">Post Description</string>
    <string name="_0_hrs_ago">0 hrs ago</string>
    <string name="user_name">User Name</string>
    <string name="enter_comment">Enter comment</string>
    <string name="comment_button">Comment Button</string>
    <string name="login">Login</string>
    <string name="user_or_e_mail">User or E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">***Password***</string>
    <string name="confirm_password_hint">***Confirm Password***</string>
    <string name="already_have_an_account">Already have an Account.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="profession">Profession</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="app_logo">App Logo</string>
    <string name="write_on_your_mind">Write on your mind...</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="content_post">content Post</string>
    <string name="e_chat_app_name">e-Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="decline_request">Decline Request</string>
    <string name="send_request">Send Request</string>
    <string name="thakurgaon_bangladesh">Thakurgaon, Bangladesh</string>
    <string name="full_image_view_for_post">Full Image View For Post</string>
</resources>