<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/single_cmtProImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00999999" />

            <TextView
                android:id="@+id/PostHeaderUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/user_name"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/single_cmtProImg"
                app:layout_constraintTop_toTopOf="@+id/single_cmtProImg" />

            <TextView
                android:id="@+id/postTimeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_0_hrs_ago"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/PostHeaderUserName"
                app:layout_constraintStart_toStartOf="@+id/PostHeaderUserName"
                app:layout_constraintTop_toBottomOf="@+id/PostHeaderUserName" />

            <TextView
                android:id="@+id/postDescriptionView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/post_description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/postTimeView"
                app:layout_constraintStart_toStartOf="@+id/single_cmtProImg"
                app:layout_constraintTop_toBottomOf="@+id/single_cmtProImg" />

            <ImageView
                android:id="@+id/postImgView"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/post_image_view"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postDescriptionView"
                app:layout_constraintVertical_bias="0.002"
                app:srcCompat="@drawable/post_image" />

            <ImageView
                android:id="@+id/likeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/like_icon"
                app:layout_constraintStart_toStartOf="@+id/postImgView"
                app:layout_constraintTop_toBottomOf="@+id/postImgView"
                app:srcCompat="@drawable/like" />

            <TextView
                android:id="@+id/likeCount"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="2dp"
                android:text="@string/_10"
                app:layout_constraintBottom_toBottomOf="@+id/likeIcon"
                app:layout_constraintStart_toEndOf="@+id/likeIcon"
                app:layout_constraintTop_toTopOf="@+id/likeIcon" />

            <ImageView
                android:id="@+id/dislikeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/dislike_icon"
                app:layout_constraintBottom_toBottomOf="@+id/likeCount"
                app:layout_constraintStart_toEndOf="@+id/likeCount"
                app:layout_constraintTop_toTopOf="@+id/likeCount"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/dislike" />

            <TextView
                android:id="@+id/dislikeCount"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="2dp"
                android:text="@string/_0"
                app:layout_constraintBottom_toBottomOf="@+id/dislikeIcon"
                app:layout_constraintStart_toEndOf="@+id/dislikeIcon"
                app:layout_constraintTop_toTopOf="@+id/dislikeIcon"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/commentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/comment_icon"
                app:layout_constraintEnd_toEndOf="@+id/postImgView"
                app:layout_constraintTop_toBottomOf="@+id/postImgView"
                app:srcCompat="@drawable/comment_3_line" />

            <TextView
                android:id="@+id/commentCount"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="2dp"
                android:text="@string/_5"
                app:layout_constraintBottom_toBottomOf="@+id/commentIcon"
                app:layout_constraintEnd_toStartOf="@+id/commentIcon"
                app:layout_constraintTop_toTopOf="@+id/commentIcon" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="@+id/commentIcon"
                app:layout_constraintStart_toStartOf="@+id/likeIcon"
                app:layout_constraintTop_toBottomOf="@+id/likeIcon" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewcmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/commentIcon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/likeIcon"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
                android:id="@+id/InputTxtComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_comment_bd"
                android:ems="10"
                android:hint="@string/enter_comment"
                android:inputType="text|textMultiLine"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="30dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/recyclerViewcmt"
                app:layout_constraintStart_toStartOf="@+id/recyclerViewcmt"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewcmt"
                android:autofillHints="#000" />

            <ImageView
                android:id="@+id/cmtImgIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/InputTxtComment"
                app:layout_constraintEnd_toEndOf="@+id/InputTxtComment"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewcmt"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/send_icon"
                android:contentDescription="@string/comment_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>