<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <include layout="@layout/toolbar_other_pages"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/ProfileCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/UpdateprofileImgView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UpdateprofileImgView"
                android:autofillHints="" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/inputUsername"
                app:layout_constraintStart_toStartOf="@+id/inputUsername"
                app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/fullName"
                app:layout_constraintStart_toStartOf="@+id/fullName"
                app:layout_constraintTop_toBottomOf="@+id/fullName" />

            <EditText
                android:id="@+id/inputprofessionUpd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/profession"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/inputPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

            <EditText
                android:id="@+id/inputCityUpd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/inputprofessionUpd"
                app:layout_constraintStart_toStartOf="@+id/inputprofessionUpd"
                app:layout_constraintTop_toBottomOf="@+id/inputprofessionUpd" />

            <EditText
                android:id="@+id/inputCountryUpd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/inputCityUpd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputCityUpd"
                app:layout_constraintTop_toBottomOf="@+id/inputCityUpd" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_2_bg"
                android:text="Update"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="@+id/inputCountryUpd"
                app:layout_constraintStart_toStartOf="@+id/inputCountryUpd"
                app:layout_constraintTop_toBottomOf="@+id/inputCountryUpd" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>